chore: added function to let users see their parking history
